[ADD] Pet job, IF YOU DONT LIKE IT, REMOVE THE JOB FROM SHARED.LUA AND NOONE WILL NOTICE ANYTHING ABOUT THE PET! -- THANKS GoDNeSS!
[ADD] Eating food makes the TF2 nom sound(bad luck if you don't have TF2)
[ADD] Poo and pee mod :D enable with rp_poopeemod 1
[ADD] Anti slobbot server crash
[ADD] Weapon checker for the cops, chief and admin
[FIX] Version number in the help screen
[FIX] Battering ram not working on warranted people
[FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
[FIX] People being able to spawn inside each other
[FIX] rp_max<custom team> erroring sometimes and breaking the whole fucking gamemode
[FIX] rp_grant breaking when the console enters it
[FIX] Stupid and retarded error in the player possessor :downs:
[FIX] Atefood icon showing for everyone
[FIX] Prop protection toggle not working
[FIX] Normalsalary being stored twice.
[FIX] /teamban not working
[FIX] RP_max<customteam>s unable to be set to 0
[CHANGE] /buypistol to /buy because of the custom items
[CHANGE] rp_max<customteam> to rp_max<customteam>s
[CHANGE] Made admins.lua a bit more idiot proof
[CHANGE] Cooks can now buy food too when hungermod is off
[CHANGE] Letters get removed after 10 minutes, long enoug and prevents them for lying there for like hours.
[REMOVE] The easter egg :(
[REMOVE] the player possessor

SVN VERSTION till 150/ 2.3.5:
Updated by: FPtje Falco

[ADD] Cops can arrest sleeping people
[ADD] Admins can disable the No-respawning when changing job with rp_norespawn 
[ADD] Admins can allow/disallow hobo's by doing rp_allowhobos <1/0>
[ADD] Every door and vehicle controls are put in the reload function of the keys SWEP
[ADD] Re-added the earthquake sound
[ADD] DarkRP now automaticly saves the DarkRP settings(not the costs) in a text file every minute and will get restored when the server starts(like after a crash)
[ADD] Cops chief and mayor only option in the Key menu for superadmins
[ADD] A very easy way to add classes! see shared.lua!