@@ -9,6 +9,7 @@ SVN version
 [ADD] Poo and pee mod :D enable with rp_poopeemod 1
 [ADD] Anti slobbot server crash
 [ADD] Weapon checker for the cops, chief and admin
+[ADD] New, more subtle and easier to find easter egg.
 [FIX] Version number in the help screen
 [FIX] Battering ram not working on warranted people
 [FIX] Zombie spawns not saving, jailpositions not saving AND custom spawns not saving!
